Revert "* Подготовлена финальная версия Filmorate"
This reverts commit 8b7a0b3e7514ff67add1d57a1788914c7e0521ec.