@@ -10,18 +10,10 @@ import org.springframework.jdbc.support.KeyHolder;
 import org.springframework.stereotype.Repository;
 import ru.yandex.practicum.filmorate.model.User;
 
+import java.sql.*;
 import java.sql.Date;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.sql.Statement;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Repository
@@ -41,10 +33,7 @@ public class UserDbStorage implements UserStorage {
             ps.setString(1, user.getEmail());
             ps.setString(2, user.getLogin());
             ps.setString(3, user.getName());
-            Date birthday = user.getBirthday() == null
-                    ? null
-                    : Date.valueOf(user.getBirthday());
-            ps.setDate(4, birthday);
+            ps.setDate(4, Date.valueOf(user.getBirthday()));
             return ps;
         }, keyHolder);
 
@@ -55,11 +44,7 @@ public class UserDbStorage implements UserStorage {
 
     @Override
     public User update(User user) {
-        String sql = """
-                UPDATE users
-                SET email = ?, login = ?, name = ?, birthday = ?
-                WHERE id = ?
-                """;
+        String sql = "UPDATE users SET email=?, login=?, name=?, birthday=? WHERE id=?";
         jdbcTemplate.update(sql,
                 user.getEmail(),
                 user.getLogin(),
@@ -71,21 +56,17 @@ public class UserDbStorage implements UserStorage {
     }
 
     @Override
-    public int delete(Integer id) {
-        return jdbcTemplate.update(
-                "DELETE FROM users WHERE id = ?",
-                id
-        );
+    public void delete(Integer id) {
+        jdbcTemplate.update("DELETE FROM users WHERE id=?", id);
+        log.info("Удалён пользователь с id: {}", id);
     }
 
     @Override
     public Optional<User> getById(Integer id) {
-        String sql = "SELECT id, email, login, name, birthday FROM users WHERE id = ?";
+        String sql = "SELECT * FROM users WHERE id=?";
         List<User> users = jdbcTemplate.query(sql, this::mapRowToUser, id);
-        if (users.isEmpty()) {
-            return Optional.empty();
-        }
-        User user = users.getFirst();
+        if (users.isEmpty()) return Optional.empty();
+        User user = users.get(0);
         user.setFriends(getFriendsByUserId(user.getId()));
         return Optional.of(user);
     }
@@ -93,16 +74,33 @@ public class UserDbStorage implements UserStorage {
     @Override
     public List<User> getAll() {
         List<User> users = jdbcTemplate.query(
-                "SELECT id, email, login, name, birthday FROM users ORDER BY id",
-                this::mapRowToUser
-        );
+                "SELECT * FROM users", this::mapRowToUser);
 
-        loadFriendsForUsers(users);
+        if (users.isEmpty()) return users;
+
+        List<Integer> userIds = users.stream()
+                .map(User::getId)
+                .collect(Collectors.toList());
+
+        String friendsSql = "SELECT user_id, friend_id FROM friendships " +
+                "WHERE user_id IN (:ids)";
+        MapSqlParameterSource params = new MapSqlParameterSource("ids", userIds);
+
+        Map<Integer, Set<Long>> friendsByUser = new HashMap<>();
+        namedJdbcTemplate.query(friendsSql, params, rs -> {
+            int userId = rs.getInt("user_id");
+            friendsByUser.computeIfAbsent(userId, k -> new HashSet<>())
+                    .add(rs.getLong("friend_id"));
+        });
+
+        users.forEach(u -> u.setFriends(
+                friendsByUser.getOrDefault(u.getId(), new HashSet<>())));
+
         return users;
     }
 
     private Set<Long> getFriendsByUserId(Integer userId) {
-        String sql = "SELECT friend_id FROM friendships WHERE user_id = ?";
+        String sql = "SELECT friend_id FROM friendships WHERE user_id=?";
         return new HashSet<>(jdbcTemplate.query(sql,
                 (rs, rn) -> rs.getLong("friend_id"),
                 userId));
@@ -114,97 +112,39 @@ public class UserDbStorage implements UserStorage {
         user.setEmail(rs.getString("email"));
         user.setLogin(rs.getString("login"));
         user.setName(rs.getString("name"));
-        Date birthday = rs.getDate("birthday");
-        if (birthday != null) {
-            user.setBirthday(birthday.toLocalDate());
-        }
+        user.setBirthday(rs.getDate("birthday").toLocalDate());
         return user;
     }
 
     @Override
     public void addFriend(Integer userId, Integer friendId) {
         jdbcTemplate.update(
-                "INSERT INTO friendships (user_id, friend_id) VALUES (?, ?)",
+                "INSERT INTO friendships (user_id, friend_id, status) VALUES (?, ?, 'UNCONFIRMED')",
                 userId, friendId
         );
     }
 
     @Override
-    public int removeFriend(Integer userId, Integer friendId) {
-        return jdbcTemplate.update(
-                "DELETE FROM friendships WHERE user_id = ? AND friend_id = ?",
-                userId,
-                friendId
+    public void removeFriend(Integer userId, Integer friendId) {
+        jdbcTemplate.update(
+                "DELETE FROM friendships WHERE user_id=? AND friend_id=?",
+                userId, friendId
         );
     }
 
     @Override
     public List<User> getFriends(Integer userId) {
-        String sql = """
-                SELECT u.*
-                FROM users u
-                JOIN friendships f ON u.id = f.friend_id
-                WHERE f.user_id = ?
-                ORDER BY u.id
-                """;
-
-        List<User> users = jdbcTemplate.query(
-                sql,
-                this::mapRowToUser,
-                userId
-        );
-
-        loadFriendsForUsers(users);
-        return users;
+        String sql = "SELECT u.* FROM users u " +
+                "JOIN friendships f ON u.id = f.friend_id " +
+                "WHERE f.user_id=?";
+        return jdbcTemplate.query(sql, this::mapRowToUser, userId);
     }
 
     @Override
     public List<User> getCommonFriends(Integer userId, Integer otherId) {
-        String sql = """
-                SELECT u.*
-                FROM users u
-                JOIN friendships f1
-                    ON u.id = f1.friend_id AND f1.user_id = ?
-                JOIN friendships f2
-                    ON u.id = f2.friend_id AND f2.user_id = ?
-                ORDER BY u.id
-                """;
-
-        List<User> users = jdbcTemplate.query(
-                sql,
-                this::mapRowToUser,
-                userId,
-                otherId
-        );
-
-        loadFriendsForUsers(users);
-        return users;
-    }
-
-    private void loadFriendsForUsers(List<User> users) {
-        if (users.isEmpty()) {
-            return;
-        }
-
-        List<Integer> userIds = users.stream()
-                .map(User::getId)
-                .toList();
-
-        MapSqlParameterSource params = new MapSqlParameterSource("ids", userIds);
-        Map<Integer, Set<Long>> friendsByUser = new HashMap<>();
-
-        namedJdbcTemplate.query(
-                "SELECT user_id, friend_id FROM friendships WHERE user_id IN (:ids)",
-                params,
-                rs -> {
-                    int userId = rs.getInt("user_id");
-                    friendsByUser.computeIfAbsent(userId, key -> new HashSet<>())
-                            .add(rs.getLong("friend_id"));
-                }
-        );
-
-        users.forEach(user -> user.setFriends(
-                friendsByUser.getOrDefault(user.getId(), new HashSet<>())
-        ));
+        String sql = "SELECT u.* FROM users u " +
+                "JOIN friendships f1 ON u.id = f1.friend_id AND f1.user_id = ? " +
+                "JOIN friendships f2 ON u.id = f2.friend_id AND f2.user_id = ?";
+        return jdbcTemplate.query(sql, this::mapRowToUser, userId, otherId);
     }
 }
